<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="8dp"
                android:text="@string/day_title" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ibMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_menu" />
    </LinearLayout>

    <View
        android:id="@+id/hr"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#FFFFFFFF" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvDayBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp" />

            <ImageView
                android:id="@+id/ivDevider1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-20dp"
                android:contentDescription="@string/star"
                android:padding="0dp"
                android:src="@drawable/ic_divider" />

            <TextView
                android:id="@+id/tvDayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp" />

            <ImageView
                android:id="@+id/ivDevider2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-20dp"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/star"
                android:cropToPadding="false"
                android:src="@drawable/ic_divider" />

            <TextView
                android:id="@+id/tvDayJustTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_just_title" />

            <TextView
                android:id="@+id/tvDayJustText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>